cabal-version:       >=1.10

name:                semialign-diff
version:             0.1.0.0
synopsis:            Filterable Semialigns can be diffed and patched
-- description:
bug-reports:         https://github.com/qfpl/semialign-diff
license:             BSD3
license-file:        LICENSE
author:              Jack Kelly
maintainer:          jack.kelly@data61.csiro.au
copyright:           Copyright (c) 2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md README.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.Semialign.Diff
  ghc-options:         -Wall
  build-depends:       base >= 4.12 && < 4.13
                     , semialign
                     , semialign-indexed
                     , these
                     , witherable
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.12 && < 4.13
                     , QuickCheck >= 2.12.6.1 && < 2.14
                     , doctest >= 0.16.0.1 && < 0.17
  hs-source-dirs:      doctests
  default-language:    Haskell2010
