cabal-version:       >=1.10

name:                semialign-diff
version:             0.1.0.0
synopsis:            Generic diffing and patching for Semialigns
description:
    The 'Semialign' typeclass lets us line up two structures of the
    same type. It's then possible to take a simple diff by comparing
    the points of overlap. This is most useful with map-like types
    ('Data.Map.Map', 'Data.HashMap.HashMap', 'Data.IntMap.IntMap').
bug-reports:         https://github.com/qfpl/semialign-diff
license:             BSD3
license-file:        LICENSE
author:              Jack Kelly
maintainer:          jack.kelly@data61.csiro.au
copyright:           Copyright (c) 2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md README.md
tested-with:         GHC == 7.10.3
                      || == 8.0.2
                      || == 8.2.2
                      || == 8.4.4
                      || == 8.6.5
                      || == 8.8.1

library
  hs-source-dirs:      src
  exposed-modules:     Data.Semialign.Diff
  ghc-options:         -Wall
  build-depends:       base >= 4.8 && < 4.14
                     , lens >= 2.5 && < 4.19
                     , semialign >= 1 && < 1.1
                     , these >= 1 && < 1.1
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.8 && < 4.14
                     , QuickCheck >= 2.12.6.1 && < 2.14
                     , doctest >= 0.16.0.1 && < 0.17
  hs-source-dirs:      doctests
  default-language:    Haskell2010
