cabal-version:       >=1.10

name:                semialign-merge
version:             0.1.0.0
synopsis:            High-performance merging for Semialigns
description:
    Functors that are both 'Semialign' and 'Witherable' can be merged
    through an 'Applicative'. The 'Merge' typeclass generalises the
    operations in 'Data.Map.Merge.Lazy', allowing us merge values with
    optimisations that take advantage of the shape of the structures
    being merged.
bug-reports:         https://github.com/qfpl/semialign-diff
license:             BSD3
license-file:        LICENSE
author:              Jack Kelly
maintainer:          jack.kelly@data61.csiro.au
copyright:           Copyright (c) 2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md README.md
tested-with:         GHC == 8.0.2
                      || == 8.2.2
                      || == 8.4.4
                      || == 8.6.5
                      || == 8.8.1

library
  hs-source-dirs:      src
  exposed-modules:     Data.Semialign.Merge
  ghc-options:         -Wall
  build-depends:       base >= 4.8 && < 4.14
                     , containers >= 0.5.9 && < 0.6.1
                     , lens >= 2.5 && < 4.19
                     , semialign >= 1 && < 1.1
                     , semialign-indexed >= 1 && < 1.1
                     , these >= 1 && < 1.1
                     , witherable >= 0.3.3 && < 0.4
  ghc-options:         -Wall
  default-language:    Haskell2010

-- test-suite doctests
--   type:                exitcode-stdio-1.0
--   main-is:             Main.hs
--   ghc-options:         -Wall -threaded
--   build-depends:       base >= 4.8 && < 4.14
--                      , QuickCheck >= 2.12.6.1 && < 2.14
--                      , doctest >= 0.16.0.1 && < 0.17
--   hs-source-dirs:      doctests
--   default-language:    Haskell2010
